--- a/allifmaalcommonapp/templates/allifmaalcommonapp/departments/add-department.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/departments/add-department.html
@@ -12,10 +12,20 @@
       <td class="allif-fix-table-col-forms">Address</td>
       <td>{{form.address}}</td>
     </tr>
+     </tr>
+      <tr>
+      <td class="allif-fix-table-col-forms">Division</td>
+      <td>{{form.division}}</td>
+    </tr>
      
     {%endblock%}
 
       {% block core-tab-col-two %}
+       </tr>
+      <tr>
+      <td class="allif-fix-table-col-forms">Branch</td>
+      <td>{{form.branch}}</td>
+    </tr>
      <tr>
       <td class="allif-fix-table-col-forms">Email</td>
       <td>{{form.email}}</td>
