--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-details.html
@@ -62,17 +62,17 @@
       <tbody>
         <tr>
           <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.usercompany}}</td>
+          <td>{{allifquery.company}}</td>
       
           </tr>
           <tr>
             <td class="allif-fix-table-col">Branch</td>
-            <td>{{allifquery.userbranch}}</td>
+            <td>{{allifquery.branch}}</td>
         
             </tr>
             <tr>
               <td class="allif-fix-table-col">Division</td>
-              <td>{{allifquery.userdivision}}</td>
+              <td>{{allifquery.division}}</td>
           
               </tr>
            
@@ -91,7 +91,7 @@
         <tbody>
           <tr>
             <td class="allif-fix-table-col">Department</td>
-            <td>{{allifquery.userdepartment}}</td>
+            <td>{{allifquery.department}}</td>
         
             </tr>
     
