--- a/allifmaalcommonapp/templates/allifmaalcommonapp/operations/years/terms/delete-term-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/operations/years/terms/delete-term-confirm.html
@@ -1,10 +1,10 @@
 {% extends 'allifmaalcommonapp/ui/general/delete-confirm.html'%}
 {% load allif_navigation_tags %}
 {% block delete-action-decline %}
-<a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Codes' user_var glblslug %}">No, Dont Delete {{allifquery}}</a>
+<a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'OperationTerms' user_var glblslug %}">No, Dont Delete {{allifquery}}</a>
 {% endblock %}
 
 {% block delete-action-confirm %}
-<a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonDeleteCode' allifquery.id user_var glblslug %}"> Yes, Delete {{allifquery}}</a>
+<a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonDeleteOperationYearTerm' allifquery.id user_var glblslug %}"> Yes, Delete {{allifquery}}</a>
 {% endblock %}
      
