--- a/allifmaalcommonapp/templates/allifmaalcommonapp/accounts/gl-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/accounts/gl-details.html
@@ -1,221 +1,92 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
+  {% extends 'allifmaalcommonapp/ui/details/item-details.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block add-form-header-block %}
+ 
+ <a href="{% allif_get_single_nav_link_url 'GeneralLedgers' user_var glblslug %}">General Ledgers</a>
+<a href="{% allif_get_single_nav_link_url 'AddGeneralLedger' user_var glblslug %}">Add General Ledger</a>
 
-<div class="allifmaal-main-container">
-  
-<!--start....main headere-->
-<div class="card-header">
 
-<div class="row mt-12" ><!--start....header row-->
+ <a href="{% allif_get_single_nav_link_url 'ChartOfAccounts' user_var glblslug %}">Chart of A/Cs</a>
+<a href="{% allif_get_single_nav_link_url 'AddChartOfAccount' user_var glblslug %}">Add Chart of Account</a>
 
-<div class="col-md-12"><!--start....header column-->
 
-<div class="container-fluid amel-content-header">
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
+  {%endblock%}
 
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditGeneralLedger' allifquery.id user_var glblslug %}">Edit Account</a></li>
-    
-      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteGenLedger' allifquery.id user_var glblslug %}">Delete Account</a></li>
+  {% block details-table-col-one %}
+    <tr>
+      <td class="allif-fix-table-col">Name</td>
+      <td>{{allifquery.name}}</td>
+    </tr>
    
-   </div>
-  </ul>
-</div>
+  {%endblock%}
 
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonAddGeneralLedger' user_var glblslug %}">New GL A/C</a>
-<a href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}">GL A/Cs</a>
-<a href="{% url 'allifmaalcommonapp:commonChartofAccounts' user_var glblslug %}">Chart of A/Cs</a>
-</div>
-
-    </div><!--end....header column-->
+  {% block details-table-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.description}}</td>
+  </tr>
+ 
+ 
   
-  </div><!--end....header row-->
- </div>
-    <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-       
-      <tr>
-        <td class="allif-fix-table-col">Company</td>
-        <td>{{allifquery.company}}</td>
-    
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Division</td>
-          <td> {{allifquery.division}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Branch</td>
-            <td> {{allifquery.branch}}</td>
-        
-            </tr>
-           
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-           <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td> {{allifquery.department}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{allifquery.description}}</td>
-        
-            </tr>
-          
-          <tr>
-            <td class="allif-fix-table-col">Salary Balance</td>
-            <td>{{allifquery.balance|floatformat:2|intcomma}}</td>
-        
-            </tr>
-
-           
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Owner</td>
-              <td>{{allifquery.owner}}</td>
-          
-              </tr>
-         
-        
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-    <div class="allif-scroll-table">
-      <div class="table-responsive allif-full-table">
-      <table class="table table-layout">
-        <thead>
-          <tr class="allif-table-header-row">
-          <td class="allif-fix-table-col">Account</td>
-          <td>Description</td>
-         
-          <td>Navigate</td>
-          
-          <td> . . . </td>
-          <td></td>
-          </tr>
-          </thead>
-          <tbody class="allif-table-body">
-           
-          
-          {% for item in allifqueryset %} 
-          <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonChartofAccountDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
-          
-            <td>
-            {{item.balance}}
-           </td>
-           
-          <td>
-            <div class="dropdown allifmaal-content-dropdown">
-              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-              <div class="dropdown-content">
-                <a href="{% url 'allifmaalcommonapp:commonEditChartofAccount' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-                
-              </div>
-            </div>
-            <div class="dropdown allif-confirm-action">
-              
-              <a href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-              <a href="{% url 'allifmaalcommonapp:commonDeleteChartofAccount' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-            </div>
+  {% endblock %}
   
-           
-          </td>
-  
-         <td> . . . </td>
-         <td></td>
-        </tr>
-        {% endfor %}
-        </tbody>
-      </table>
-      </div>
-     </div>
+  {% block core-details-tab-col-one %}
+   <tr>
+    <td class="allif-fix-table-col">Balance</td>
+    <td>{{allifquery.balance|floatformat:2|intcomma}}</td>
+  </tr>
+  {%endblock%}
 
-</div><!--end....table column-->
-
-</div><!--end....table row-->
-
-
-</div>
-
-</div>
-  {% block scripts %}
+  {% block core-details-tab-col-two %}
+ 
+  <tr>
+    <td class="allif-fix-table-col">Date</td>
+    <td>{{allifquery.date|date:'d/m/Y'}}</td>
+  </tr>
 
   {% endblock %}
-   {% endblock %}
-   
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col">{{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'GeneralLedgers' user_var glblslug %}">Go Back</a></td>
+    </tr>
+    
+  <tr>
+    <td class="allif-fix-table-col">Edit {{allifquery}}</td>
+    <td><a class="amel-table-list-identifier" href="{{ allif_contextual_action_links.EditGeneralLedger.url }}">Edit {{allifquery}}</a></td>
+  </tr>
+
+  
+  <tr>
+    <td class="allif-fix-table-col">{{allifquery}} Details</td>
+    <td><a class="amel-table-list-identifier" href="{{ allif_contextual_action_links.GeneralLedgerDetails.url }}">{{allifquery}} Details</a></td>
+  </tr>
+  {%endblock%}
+
+  {% block general-details-tab-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.description}}</td>
+  </tr>
+  {% endblock %}
+  
+  {% block allif_sensitive_section_col_two %}
 
 
+  <tr>
+    <td class="allif-fix-table-col">Synchronize</td>
+    <td><a class="amel-table-list-identifier" href="{{ allif_contextual_action_links.SynchGeneralLedger.url }}"> Synchronize {{allifquery}}</a></td>
+  </tr>
 
+  <tr>
+    <td class="allif-fix-table-col">Delete {{allifquery}}</td>
+    <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteGeneralLedgerConfirm.url }}">Delete {{allifquery}}</a></td>
+  </tr>
+  {%endblock%}
 
+  {% block item_details_related_items_full_table %} {%endblock%}
+  {% block item_details_related_items_full_half_tables %}{%endblock%}
 
-
-
-
-
-
+ 
