--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block list-table-content-seciton-dropdown-links %}
-<a href="{% url 'allifmaalcommonapp:commonEditEntityByAllifAdmin' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Bank</a>
+<a href="{% url 'allifmaalcommonapp:commonEditEntityByAllifAdmin' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Company</a>
 <a href="{% url 'allifmaaladminapp:adminBlockUnblockEntity' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">
    {% if item.status == 'Blocked' %} Unblock {% else %} Block {% endif %}
 </a>
